# sample-c-gtk3-with-cmake

./: CMakeLists.txt  README.md
src/: exampleapp.c  exampleappwin.c  main.c
ui/: builder.ui
